--- a/head.html
+++ b/head.html
@@ -1,5 +1,5 @@
 <script>
   if (location.pathname === '/' && location.host !== 'blog.m4i.jp') {
-    location.replace('http://blog.m4i.jp/');
+    location.replace('https://blog.m4i.jp/');
   }
 </script>
